Swym wishlist close button z-index fix

--- a/src/assets/styles/7.utilities/overrides.scss
+++ b/src/assets/styles/7.utilities/overrides.scss
@@ -135,10 +135,10 @@
 }
 
 #swym-close-notepad-button {
-  z-index: 10;
+  z-index: 10 !important;
 }
 
 #swym-plugin .swym-tab-overlay,
 #swym-hosted-plugin .swym-tab-overlay {
-  z-index: 9;
+  z-index: 9 !important;
 }
